Added websocket config

--- a/.env.production.TEMPLATE
+++ b/.env.production.TEMPLATE
@@ -1,5 +1,5 @@
-
 VITE_API_URL='Production base url e.g: https://yourdomain.com'
+VITE_WEBSOCKET_URL=''
 
 VITE_COGNITO_REGION='AWS region where your cognito pool is installed'
 VITE_COGNITO_USERPOOL_ID='Userpool ID'
