--- a/.env.development.TEMPLATE
+++ b/.env.development.TEMPLATE
@@ -1,4 +1,5 @@
 VITE_API_URL='http://127.0.0.1:5000'
+VITE_WEBSOCKET_URL=''
 
 VITE_COGNITO_REGION='AWS region where your cognito pool is installed'
 VITE_COGNITO_USERPOOL_ID='Userpool ID'
