--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "react-dropzone": "^14.3.5",
     "react-flow-renderer": "^10.3.17",
     "react-hook-form": "^7.52.2",
+    "react-resizable-panels": "^2.1.8",
     "react-router-dom": "^6.26.0",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.1",
