--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
     "localforage": "^1.10.0",
     "lucide-react": "^0.426.0",
     "match-sorter": "^6.3.4",
+    "nanoid": "^5.1.5",
     "next-themes": "^0.4.4",
     "papaparse": "^5.4.1",
     "react": "^18.3.1",
@@ -64,7 +65,8 @@
     "tailwind-merge": "^2.4.0",
     "tailwindcss-animate": "^1.0.7",
     "vaul": "^0.9.1",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.8.0",
