--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "@radix-ui/react-toast": "^1.2.1",
     "@radix-ui/react-tooltip": "^1.1.2",
     "@tanstack/react-table": "^8.20.1",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@xyflow/react": "^12.3.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -58,6 +59,7 @@
     "react-hook-form": "^7.52.2",
     "react-resizable-panels": "^2.1.8",
     "react-router-dom": "^6.26.0",
+    "react-syntax-highlighter": "^15.6.1",
     "reactflow": "^11.11.4",
     "recharts": "^2.15.1",
     "sonner": "^1.7.2",
